fixed overflow bug on body

--- a/src/app/mainpage/mainpage.component.scss
+++ b/src/app/mainpage/mainpage.component.scss
@@ -2,7 +2,7 @@
 
 :host {
     width: 100%;
-    height: 100%;
+    height: auto;
     display: block;
 }
 
@@ -29,8 +29,8 @@ main {
 }
 
 .fpholder {
-    //margin-bottom: 10em;
     cursor: grab;
+    height: 100vh;
 
     .layer {
         position: absolute;
